# HomeWork_22

./: .env_template  .gitignore  README.md  catalog_fixture.json  pyproject.toml
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py  0002_category_image.py  0003_product_views_counter.py
catalog/templates/: contacts.html  home.html
catalog/templates/catalog/: base.html  categories_list.html  category_confirm_delete.html  category_detail.html  category_form.html  contacts.html  header.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  products_list.html
catalog/templates/catalog/includes/: header.html
config/: settings.py  urls.py
myblog/: admin.py  forms.py  models.py  urls.py  views.py
myblog/migrations/: 0001_initial.py  0002_alter_blogpost_options_remove_blogpost_views_and_more.py
myblog/templates/myblog/: blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogposts_list.html
myblog/templates/myblog/include/: header.html
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: createadmin.py
users/migrations/: 0001_initial.py  0002_customuser_token.py
users/templates/users/: login.html  login2.html  profile_edit.html  register.html
